# diffusion_policy

./: .gitignore  LICENSE  README.md  conda_environment.yaml  conda_environment_macos.yaml  conda_environment_real.yaml  config_pa_arm_real_dp_cnn.yaml  config_pa_arm_robot_dp_cnn_rlds.yaml  config_pa_arm_sim_dp_cnn.yaml  data_check.py  demo_pusht.py  demo_real_robot.py  env_checker.py  eval.py  eval_real_robot.py  image_pusht_diffusion_policy_cnn.yaml  multirun_metrics.py  nominal_cfg.pt  pa_arm_client.py  pa_arm_robot_diffusion_policy_cnn.yaml  pa_arm_server.py  pa_arm_sim_client.py  pa_arm_sim_diffusion_policy_cnn.yaml  pa_arm_sim_prediction.py  pa_arm_sim_server.py  pyproject.toml  pyrightconfig.json  ray_exec.py  ray_train_multirun.py  requirements.txt  requirements_extra.txt  setup.py  start_server_on_tmux.sh  train.py
aloha_scripts/: constants.py  real_env.py  robot_utils.py  teleop.py
checkpoints/: download_checkpoints.sh  upload_checkpoints.sh
docker/: .gitignore  BUILD_DOCKER_IMAGE.sh  Dockerfile  RUN_DOCKER_CONTAINER.sh  conda_environment.yaml  docker-compose.yml  initialize-docker-container.sh
scripts/: test_pusht.sh
tests/: test_block_pushing.py  test_cv2_util.py  test_multi_realsense.py  test_pose_trajectory_interpolator.py  test_precise_sleep.py  test_replay_buffer.py  test_ring_buffer.py  test_robomimic_image_runner.py  test_robomimic_lowdim_runner.py  test_shared_queue.py  test_single_realsense.py  test_timestamp_accumulator.py
utils/: DOWNLOAD_CONFIGS.sh  DOWNLOAD_DATASETS.sh
visualization/: ft.py  visualize_episode_length.py  viz_constants.py  (+4 more)
(+343 files in other folders)
